# ESP32_BT-SPKR-DSP-001_BLE_GATT

./: .gitignore  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  FSD-DSP-001_ESP32_BLE_GATT.md  LICENSE  LICENSE.txt  Protocol.md  README.md  partitions_ota.csv  sdkconfig  sdkconfig.defaults
docs/: architecture.md  audio-path.md  control-path.md  overview.md  protocol.md
main/: CMakeLists.txt  ble_gatt_dsp.c  ble_gatt_dsp.h  dsp_processor.c  dsp_processor.h  main.c  nvs_settings.c  nvs_settings.h  ota_manager.c  ota_manager.h  wifi_manager.c  wifi_manager.h
